Add conclusion about obtained results to Naive Bayes Algorithms.

--- a/7.Probability/main.ipynb
+++ b/7.Probability/main.ipynb
@@ -866,6 +866,24 @@
     "    print(\"\\nModel Accuracy Results:\")\n",
     "    print(df_results.to_string(index=False))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25baff8e",
+   "metadata": {},
+   "source": [
+    "## **Conclusion**\n",
+    "\n",
+    "After getting these results I found rules when and in what case to use each algorithm: \n",
+    "\n",
+    "***Gaussian NB*** typically works better for continuous data, \n",
+    "\n",
+    "***Multinomial NB*** for count data,but also it was a good option in my case, and \n",
+    "\n",
+    "***Bernoulli NB*** for binary data. My dataset appears to contain information that is best preserved in its continuous form.\n",
+    "\n",
+    "This is the main reason why accuracy score for Gaussian and Bernoulli differ a little bit."
+   ]
   }
  ],
  "metadata": {
