--- a/10.SVM/main.ipynb
+++ b/10.SVM/main.ipynb
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": null,
    "id": "d8dfb867",
    "metadata": {},
    "outputs": [],
@@ -481,28 +481,26 @@
    "id": "b6898983",
    "metadata": {},
    "source": [
-    "# SVM: Feature Scaling & Performance Guide\n",
+    "# Conclusion\n",
     "\n",
-    "## 📊 Feature Scaling Effects on SVM Performance\n",
+    "## Feature Scaling Effects on SVM Performance\n",
     "\n",
-    "- ⚠️ **Scaling is mandatory** for SVMs to ensure all features contribute equally.\n",
-    "- ✅ `StandardScaler` typically performs best.\n",
-    "- 📉 `MinMaxScaler` and `MaxAbsScaler` can be useful when data doesn't follow a normal distribution.\n",
+    "- First step to do when you are working with SVM is to scale data almost in the all situations StandartScaler is the best option the following would be MixMaxScaler and MaxAbsScaler.In my situation almost are no difference between these 3 algorithms but in other cases may have different behavior but StandartScaler is also best optimized for other algorithms.\n",
     "\n",
+    "- Scaling ensures that all features are on the same scale this permits to boundaries to be well determined (as we saw in the graph above).\n",
     "---\n",
     "\n",
-    "## 💪 Key SVM Strengths\n",
+    "## Key SVM Strengths\n",
     "\n",
-    "- Effective in **high-dimensional spaces** (number of features > number of samples).\n",
-    "- **Memory efficient**: uses only a subset of training points (support vectors).\n",
-    "- Performs well on **smaller datasets**, where neural networks might overfit.\n",
+    "- Good choice when (number of features > number of samples).\n",
+    "- Interesting Fact: Sometimes SVMs algorithms give a better results as neural networks on small datasets,this happens because neural networks are intended to be used on large datasets. \n",
     "\n",
     "---\n",
     "\n",
     "## 💡 Tips\n",
     "\n",
-    "- 🔧 **Always scale your features** when using SVMs, preferably with `StandardScaler`.\n",
-    "- 🧠 For complex datasets, the **RBF kernel** often provides the best balance of flexibility and generalization.\n"
+    "-  Use **Stadart Scaler** \n",
+    "-  For complex datasets, use **RBF kernel** because it can capture complex nonlinear relationships and maps data in a different way specifically for use with large datasets.\n"
    ]
   }
  ],
