--- a/16.Feature_Engineering/main.ipynb
+++ b/16.Feature_Engineering/main.ipynb
@@ -18,17 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "id": "d5c9fc8b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 40,
    "id": "6d29666c",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 41,
    "id": "ee99bd59",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 42,
    "id": "5b397166",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 43,
    "id": "1521fd00",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "aedcd0c0",
    "metadata": {},
    "outputs": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 45,
    "id": "31ced0c1",
    "metadata": {},
    "outputs": [
@@ -257,8 +257,8 @@
      "output_type": "stream",
      "text": [
       "Trained Model without polynomial features\n",
-      "Model Accuracy: 0.7929928866668681\n",
-      "Mean Squared Error: 14.679095205055257\n"
+      "Model Accuracy: 0.7923117067319738\n",
+      "Mean Squared Error: 14.727398400800979\n"
      ]
     }
    ],
@@ -275,8 +275,8 @@
     "X_train = scaler.fit_transform(X_train)\n",
     "X_test = scaler.transform(X_test)\n",
     "\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "model = LinearRegression()\n",
+    "from sklearn.linear_model import  Ridge\n",
+    "model = Ridge()\n",
     "model.fit(X_train, y_train)\n",
     "y_pred = model.predict(X_test)\n",
     "mse = mean_squared_error(y_test, y_pred)\n",
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "7a313c6e",
    "metadata": {},
    "outputs": [
@@ -365,11 +365,86 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "8ff708ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        CRIM    ZN  INDUS  ...          B^2      B LSTAT     LSTAT^2\n",
+      "0    0.00632  18.0   2.31  ...  157529.6100  1976.562000   24.800400\n",
+      "1    0.02731   0.0   7.07  ...  157529.6100  3627.666000   83.539600\n",
+      "2    0.02729   0.0   7.07  ...  154315.4089  1583.104900   16.240900\n",
+      "3    0.03237   0.0   2.18  ...  155732.8369  1160.212200    8.643600\n",
+      "4    0.06905   0.0   2.18  ...  157529.6100  2970.796500   56.025225\n",
+      "..       ...   ...    ...  ...          ...          ...         ...\n",
+      "501  0.06263   0.0  11.93  ...  153656.1601  4285.757333  119.537778\n",
+      "502  0.04527   0.0  11.93  ...  157529.6100  3603.852000   82.446400\n",
+      "503  0.06076   0.0  11.93  ...  157529.6100  2238.516000   31.809600\n",
+      "504  0.10959   0.0  11.93  ...  154802.9025  2549.556000   41.990400\n",
+      "505  0.04741   0.0  11.93  ...  157529.6100  3127.572000   62.094400\n",
+      "\n",
+      "[506 rows x 104 columns]\n",
+      "Trained Model with Box-Cox transformation\n",
+      "Model Accuracy: 0.797087048636807\n",
+      "Mean Squared Error: 14.880374375689554\n"
+     ]
+    }
+   ],
+   "source": [
+    "from imperio import BoxCoxTransformer\n",
+    "\n",
+    "def apply_boxcox_transformation(df, target, columns):\n",
+    "    transformer = BoxCoxTransformer(l=0.5)\n",
+    "    transformer.fit(df[columns], df[target])\n",
+    "    df_transformed = transformer.apply(df, target=target, columns=columns)\n",
+    "    return df_transformed\n",
+    "\n",
+    "columns= ['CRIM', 'ZN', 'INDUS', 'NOX', 'RM', 'AGE',\n",
+    "             'DIS', 'RAD', 'TAX', 'PTRATIO', 'B', 'LSTAT']\n",
+    "\n",
+    "transformer = BoxCoxTransformer(l=0.5)\n",
+    "\n",
+    "transformer.fit(X, y)\n",
+    "\n",
+    "df_transformed = transformer.apply(df_with_poly, target='MEDV', columns=columns)\n",
+    "\n",
+    "print(df_transformed)\n",
+    "\n",
+    "X=df_transformed.drop(columns=['MEDV'])\n",
+    "y=df_transformed['MEDV']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "model = Ridge(alpha=0.1, fit_intercept=True)\n",
+    "model.fit(X_train, y_train)\n",
+    "y_pred = model.predict(X_test)\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "accuracy_score = model.score(X_test, y_test)\n",
+    "print(\"Trained Model with Box-Cox transformation\")\n",
+    "print(f\"Model Accuracy: {accuracy_score}\")\n",
+    "print(f\"Mean Squared Error: {mse}\")\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c252aa74",
    "metadata": {},
    "source": [
     "## Conclusion\n",
+    "\n",
+    "### 📦 Install the Imperio Library from Sigmoid\n",
+    "\n",
+    "[Click here to view Imperio on PyPI](https://pypi.org/project/imperio/)\n",
+    "\n",
+    "***Model Accuracy: 0.79 23117067319738***  - Scikit Learn Implementation\n",
+    "\n",
+    "***Model Accuracy: 0.79 7087048636807*** - Sigmoid Implementation\n",
+    "\n",
+    "### Difference is not so high but is impressive ,they succeded in developing algorithm with better perfomance \n",
     "\n",
     "#### Feature engineering significantly improved model performance. By imputing missing values, removing outliers, and adding polynomial features, the model's R² score increased from 0.79 to 0.83, and the MSE dropped from 14.68 to 11.78.\n",
     "\n",
