--- a/17.Feature_Selection/main.ipynb
+++ b/17.Feature_Selection/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 94,
    "id": "ca944f70",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
        "4       43.5                     27.1            45.0          217.0     B  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 95,
    "id": "0dd5d9ed",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 96,
    "id": "df364c26",
    "metadata": {},
    "outputs": [
@@ -345,7 +345,7 @@
        "13392      2  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 97,
    "id": "ef857c8d",
    "metadata": {},
    "outputs": [
@@ -388,7 +388,7 @@
        "Name: class, dtype: float64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 98,
    "id": "891c64e5",
    "metadata": {},
    "outputs": [
@@ -577,7 +577,7 @@
        "4       43.5                     27.1            45.0          217.0      1  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 99,
    "id": "a51fef36",
    "metadata": {},
    "outputs": [],
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 100,
    "id": "b688e532",
    "metadata": {},
    "outputs": [
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 101,
    "id": "dcf50aa8",
    "metadata": {},
    "outputs": [
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 102,
    "id": "2359988e",
    "metadata": {},
    "outputs": [],
@@ -731,37 +731,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Features selected: ['age', 'gender', 'height_cm', 'weight_kg', 'body fat_%', 'diastolic', 'systolic', 'gripForce', 'sit and bend forward_cm', 'sit-ups counts', 'broad jump_cm']\n",
+      "\n",
+      "New columns after PCAReducer: ['age', 'gender', 'height_cm', 'weight_kg', 'body fat_%', 'diastolic', 'systolic', 'gripForce', 'sit and bend forward_cm', 'sit-ups counts', 'broad jump_cm']\n",
       "\n",
       "Best params: {'n_estimators': 150, 'max_features': 'log2', 'max_depth': 30}\n",
-      "Best CV score (on training data): 0.7272717330827183\n",
+      "Best RandomizedSearchCV score (on training data): 0.7289517518004247\n",
       "\n",
-      "Final accuracy on unseen test data: 0.7525\n"
+      "Final accuracy on test data: 0.7536\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from sklearn.model_selection import train_test_split, RandomizedSearchCV\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "import pandas as pd\n",
+    "\n",
+    "from kydavra import PCAReducer\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42, stratify=y\n",
+    ")\n",
+    "\n",
+    "train_df = pd.concat([X_train, y_train], axis=1)\n",
+    "\n",
+    "reducer = PCAReducer(min_corr=0.5, max_corr=0.8, correlation_type='pearson')\n",
+    "train_reduced_df = reducer.reduce(train_df, y_column='class')\n",
+    "\n",
+    "test_df = pd.concat([X_test, y_test], axis=1)\n",
+    "test_reduced_df = reducer.apply(test_df)\n",
+    "\n",
+    "X_train_reduced = train_reduced_df.drop(columns=['class'])\n",
+    "X_test_reduced = test_reduced_df.drop(columns=['class'])\n",
+    "\n",
     "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train_reduced)\n",
+    "X_test_scaled = scaler.transform(X_test_reduced)\n",
+    "\n",
     "rf = RandomForestClassifier(random_state=42)\n",
     "\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
-    "\n",
-    "# Selecting best features for ANOVA\n",
-    "train_df = pd.concat([X_train, y_train], axis=1)\n",
-    "selector = ANOVASelector(significance_level=0.1, classification=True)\n",
-    "selected_cols = selector.select(train_df, y_column='class')\n",
-    "\n",
-    "X_train_selected = X_train[selected_cols]\n",
-    "X_test_selected = X_test[selected_cols]\n",
-    "\n",
-    "# Scale the selected features\n",
-    "X_train_scaled = scaler.fit_transform(X_train_selected)\n",
-    "X_test_scaled = scaler.transform(X_test_selected)\n",
-    "\n",
-    "\n",
-    "# Find the best hyperparameters for RandomizedSearchCV\n",
     "param_dist = {\n",
     "    'n_estimators': [50, 100, 150, 200],\n",
     "    'max_depth': [None, 10, 20, 30],\n",
@@ -777,17 +786,16 @@
     "    random_state=42,\n",
     "    n_jobs=-1\n",
     ")\n",
-    "random_search.fit(X_train_selected, y_train)\n",
+    "random_search.fit(X_train_scaled, y_train)\n",
     "\n",
     "best_rf = random_search.best_estimator_\n",
-    "y_pred = best_rf.predict(X_test_selected)\n",
+    "y_pred = best_rf.predict(X_test_scaled)\n",
     "test_accuracy = accuracy_score(y_test, y_pred)\n",
     "\n",
-    "\n",
-    "print(f\"Features selected: {selected_cols}\")\n",
+    "print(f\"\\nNew columns after PCAReducer: {list(X_train_reduced.columns)}\")\n",
     "print(\"\\nBest params:\", random_search.best_params_)\n",
     "print(\"Best RandomizedSearchCV score (on training data):\", random_search.best_score_)\n",
-    "print(f\"\\nFinal accuracy on test data: {test_accuracy:.4f}\")"
+    "print(f\"\\nFinal accuracy on test data: {test_accuracy:.4f}\")\n"
    ]
   }
  ],
